<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90CAF9"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/hnt_et_name"
        android:textSize="20sp"
        android:background="#ffffff"
        android:layout_above="@+id/et_mobile_phone"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/et_mobile_phone"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:textSize="20sp"
        android:inputType="phone"
        android:hint="@string/hnt_et_mobile_phone"
        android:background="#ffffff"
        android:layout_above="@+id/et_home_phone"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/et_home_phone"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:inputType="phone"
        android:hint="@string/hnt_et_home_phone"
        android:layout_above="@+id/et_work_email"
        android:background="#ffffff"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/et_work_email"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:inputType="textEmailAddress"
        android:hint="@string/hnt_et_work_email"
        android:layout_above="@+id/et_home_email"
        android:background="#ffffff"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/et_home_email"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:inputType="textEmailAddress"
        android:hint="@string/hnt_et_home_email"
        android:layout_centerVertical="true"
        android:background="#ffffff"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:text="@string/str_btn_add"
        android:layout_below="@+id/et_home_email"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/btn_contacts"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/str_btn_contacts"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/btn_add" />

</RelativeLayout>